# ds-fiap-mba

./: pyproject.toml
aula04/: rl01.ipynb  rl02.ipynb  rl03.ipynb
housing/: housing.ipynb
titanic/: titanic.ipynb
